Issue #1760284 by damiankloip, tim.plunkett: Copy the new core Config Entity List API into Views.

--- a/css/views-admin.theme.css
+++ b/css/views-admin.theme.css
@@ -235,6 +235,10 @@ input.form-radio {
   font-weight: bold;
 }
 
+tr.views-ui-list-disabled td {
+  color: #999;
+}
+
 /* @end */
 
 /* @group Messages */
