Issue #1779720 by dead_arm: Clean up the fieldset replacement for CTools collapsible-div.

--- a/css/views-admin.bartik-rtl.css
+++ b/css/views-admin.bartik-rtl.css
@@ -6,7 +6,16 @@
  /* @group Lists */
 
 .views-display-top .secondary .action-list {
+  padding-left: inherit;
   padding-right: 0;
+}
+
+/* @end */
+
+/* @group Collapsible */
+
+.views-display-columns fieldset .fieldset-legend {
+  padding: 0 2px 4px 0;
 }
 
 /* @end */
