--- a/css/views-admin-rtl.css
+++ b/css/views-admin-rtl.css
@@ -51,18 +51,11 @@
 
 .views-display-tab .fieldset-legend {
   left: auto;
-  right: -5px;
 }
 
-/* @end */
-
-/* @group Attachment details actions
- *
- * Display the "Delete" and "Duplicate" buttons to the right.
- */
-.views-display-tab .fieldset-wrapper > .views-ui-display-tab-bucket .actions {
-  left: 0;
-  right: auto;
+.views-display-columns fieldset .fieldset-legend {
+  padding-left: inherit;
+  padding-right: 0;
 }
 
 /* @end */
@@ -72,14 +65,11 @@
 .views-display-columns > * {
   float: right;
   margin-left: 0;
-  margin-right: 1%;
-  padding-left: 0;
-  padding-right: 1%;
+  margin-right: 2%;;
 }
 
 .views-display-columns > *:first-child {
   margin-right: 0;
-  padding-right: 0;
 }
 
 /* @end */
